Fixed white space in textarea

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -69,6 +69,10 @@
   color: var(--on-success);
 }
 
+.field textarea {
+  white-space-collapse: revert;
+}
+
 // dialog {
 //   padding: 0;
 //   border: $border-width $border-style $border-color;
